add getuser
