# api/api.swagger.yaml
@@ -3441,17 +3441,87 @@ paths:
                 $ref: '#/components/schemas/httpError'
   /people/find:
     get:
+      operationId: findPerson
+      description: Find person in iga
       tags:
         - people
-      summary: Get user info
-      operationId: GetUser
       parameters:
-        - name: search
-          in: query
-          description: User login
+        - in: query
+          name: search
+          description: Person login
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: enabled
+          description: If only enabled accounts should be returned
+          required: false
+          schema:
+            type: boolean
+            default: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/UserInfo'
+                  status_code:
+                    type: integer
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/httpError'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/httpError'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/httpError'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/httpError'
+  /people/search:
+    get:
+      operationId: searchPeople
+      description: Search people in sso
+      tags:
+        - people
+      parameters:
+        - in: query
+          name: search
+          description: First and last name or username
           required: true
           schema:
             type: string
+        - in: query
+          name: enabled
+          description: If only enabled accounts should be returned
+          required: false
+          schema:
+            type: boolean
+            default: true
+        - in: query
+          name: limit
+          description: Search limit
+          required: false
+          schema:
+            type: integer
+            default: 100
       responses:
         200:
           description: OK
@@ -3490,6 +3560,13 @@ paths:
                 $ref: '#/components/schemas/httpError'
 components:
   schemas:
+    PeopleResp:
+      description: People from iga
+      properties:
+        people:
+          type: array
+          items:
+            $ref: '#/components/schemas/UserInfo'
     UserInfo:
       type: object
       properties:
